# janus

./: Cargo.toml  README.md  TODO.md
crates/apalis-redis/: CHANGELOG.md  Cargo.toml  README.md  deny.toml
crates/apalis-redis/examples/: basic.rs  dag.rs  shared.rs  stepped.rs  with_ui.rs
crates/apalis-redis/lua/: list_all_tasks.lua  list_all_workers.lua  list_tasks.lua  list_workers.lua  overview.lua  overview_by_queue.lua  register_worker.lua
crates/apalis-redis/src/: lib.rs
crates/apalis-redis/supply-chain/: config.toml
crates/backtest/: Cargo.toml
crates/backtest/src/: data_loader.rs  fortress.rs  lib.rs  ohlcv_loader.rs  replay.rs  strategy_backtester.rs  vectorized.rs
crates/backtest/tests/: strategy_validation.rs
crates/bybit-client/: Cargo.toml
crates/bybit-client/src/: lib.rs
crates/cns/: Cargo.toml  README.md
crates/cns/src/: alerts.rs  brain.rs  lib.rs  metrics.rs  neuromorphic.rs  probes.rs  reflexes.rs  restart.rs  shutdown.rs  signals.rs  watchdog.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/data-quality/: Cargo.toml  README.md
crates/data-quality/src/: error.rs  export.rs  lib.rs  metrics.rs  pipeline.rs
crates/dsp/: Cargo.toml  README.md  frama.rs  mod.rs  normalize.rs  pipeline.rs  sevcik.rs
crates/dsp/benches/: bench_dsp.rs
crates/dsp/tests/: integration.rs
crates/exchanges/: Cargo.toml  README.md
crates/exchanges/examples/: cns_integration.rs
crates/exchanges/src/: cns.rs  health.rs  lib.rs  normalizer.rs  types.rs
crates/gap-detection/: CHANGELOG.md  Cargo.toml  README.md  REVIEW_SUMMARY.md
crates/gap-detection/examples/: real_world_simulation.rs
crates/gap-detection/src/: lib.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs  shutdown.rs
crates/lob/: Cargo.toml
crates/lob/benches/: orderbook_throughput.rs
crates/lob/src/: fill_model.rs  l2_replay.rs  latency.rs  lib.rs  market_impact.rs  matching_engine.rs  order_types.rs  orderbook.rs
crates/logic/: Cargo.toml  README.md
crates/logic/src/: constraints.rs  diff_tnorm.rs  lib.rs  ltn.rs  position.rs  predicates.rs  risk.rs  risk_engine.rs  signal.rs  tnorm.rs
crates/logic/tests/: integration_test.rs
crates/ltn/: Cargo.toml  axioms.rs  config.rs  fuzzy_ops.rs  mod.rs  predicates.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  qdrant_client.rs  replay.rs  vector_db.rs
crates/ml/: Cargo.toml
crates/ml/docs/: AUTODIFF_FINAL_STATUS.md  AUTODIFF_QUICK_START.md  AUTODIFF_SESSION_SUMMARY.md  GPU_ACCELERATION.md  GRADIENT_CLIPPING.md  OPTIMIZER_INTEGRATION_COMPLETE.md  WEEK4_PHASE4B_AUTODIFF_INTEGRATION.md  WEIGHT_SERIALIZATION_COMPLETE.md
crates/ml/examples/: autodiff_training_example.rs  check_gpu.rs  gradient_clipping_demo.rs  save_load_model.rs  train_example.rs
crates/ml/src/: backend.rs  config.rs  dataset.rs  dqn.rs  error.rs  evaluation.rs  lib.rs  optimizer.rs  training.rs  training_autodiff.rs
crates/models/: Cargo.toml
crates/models/src/: account.rs  lib.rs  mod.rs  performance.rs  prop_firm.rs
crates/optimizer/: Cargo.toml  KRAKEN_COMPARISON.md
crates/optimizer/src/: asset.rs  backtester.rs  config.rs  constraints.rs  error.rs  lib.rs  objective.rs  publisher.rs  results.rs  sampler.rs  search.rs
crates/rate-limiter/: BUGFIXES.md  Cargo.toml  README.md
crates/rate-limiter/benches/: token_bucket.rs
crates/rate-limiter/examples/: exchange_actor.rs
crates/rate-limiter/src/: circuit_breaker.rs  lib.rs
crates/rate-limiter/tests/: integration_test.rs
crates/regime/: Cargo.toml
crates/regime/src/: detector.rs  ensemble.rs  hmm.rs  indicators.rs  lib.rs  router.rs  types.rs
crates/registry/: Cargo.toml
crates/registry/src/: cache.rs  lib.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: affinity.rs  bollinger_squeeze.rs  ema_flip.rs  ema_ribbon_scalper.rs  gating.rs  lib.rs  mean_reversion.rs  momentum_surge.rs  multi_tf_trend.rs  opening_range.rs  trend_pullback.rs  vwap_scalper.rs
crates/training/: Cargo.toml  README.md
crates/training/examples/: vision_ltn_training.rs
crates/training/src/: lib.rs  loop.rs  optimizer.rs  replay.rs  scheduler.rs
crates/vision/: Cargo.toml  README.md  STATUS.md  WEEK7_DAY4_LIVE_PIPELINE.md  WEEK7_DAY4_QUICKREF.md  WEEK7_DAY5_PRODUCTION.md
crates/vision/benches/: diffgaf_bench.rs  feature_engineering_bench.rs
crates/vision/docs/: ADAPTIVE_QUICK_REFERENCE.md  COMPREHENSIVE_SUMMARY.md  EXECUTION_METRICS_QUICKREF.md  NEXT_ACTIONS.md  QUICK_REFERENCE.md  ROADMAP.md  WEEK6_DAY4_COMPLETE.md  WEEK6_SUMMARY.md  WEEK7_DAY1_SIGNAL_GENERATION.md  WEEK7_DAY1_SUMMARY.md  (+8 more)
lib/janus-api/: Cargo.toml
lib/janus-core/: Cargo.toml
neuromorphic/: Cargo.toml  README.md  build.rs  lib.rs
neuromorphic/amygdala/: fear_network.rs  kill_switch.rs  mod.rs
neuromorphic/basal_ganglia/: actor_critic.rs  direct_pathway.rs  indirect_pathway.rs  mod.rs  reward.rs
neuromorphic/cerebellum/: adverse_selection.rs  almgren_chriss.rs  control.rs  fill_probability.rs  forward_model.rs  learning.rs  lob_simulator.rs  mod.rs
neuromorphic/cortex/: mod.rs
neuromorphic/distributed/: checkpoint.rs  coordinator.rs  data_loader.rs  grpc_client.rs  grpc_server.rs  mod.rs  multinode.rs  nccl_backend.rs  network.rs  runtime.rs
neuromorphic/examples/: grpc_nccl_training.rs  train_multinode.rs  train_vivit.rs
neuromorphic/gpu/: kernels.rs  mod.rs  runtime.rs  shaders.rs  tensor_bridge.rs
neuromorphic/hippocampus/: buffer.rs  consolidation.rs  diffusion.rs  mod.rs
neuromorphic/hypothalamus/: drive.rs  kelly.rs  mod.rs  regulation.rs
neuromorphic/integration/: TRAINING_README.md  cognitive_core.rs  coordinator.rs  data.rs  heterogeneity.rs  message_bus.rs  mod.rs  orchestrator.rs  realtime.rs  service_bridges.rs  training.rs
neuromorphic/prefrontal/: mod.rs  predicates.rs
neuromorphic/thalamus/: mod.rs
neuromorphic/visual_cortex/: feature_extraction.rs  mod.rs  parametric_umap.rs  preprocessing.rs
services/api/: Cargo.toml  README.md
services/backward/: Cargo.toml
services/cns/: Cargo.toml  build.rs
(+720 files in other folders)
