[package]
name = "apalis-redis"
version = "0.1.0"
authors = ["nuniesmith"]
edition = "2024"
license = "MIT"
description = "Background task processing for rust using apalis and redis"
keywords = ["background", "jobs", "queue", "redis", "async"]
categories = ["asynchronous", "database"]
readme = "README.md"
include = ["src/**", "lua/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
doctest = false  # Doctests require a live Redis connection (REDIS_URL)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis-codec = "0.1.0-rc.3"
apalis-core = { version = "1.0.0-rc.3", default-features = false, features = [
    "sleep",
] }
redis = { version = "1.0", default-features = false, features = [
    "script",
    "aio",
    "connection-manager",
] }
serde = "1"
log = "0.4.21"
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
futures = "0.3.30"
tokio = { version = "1", features = ["rt", "net"], optional = true }
thiserror = "2.0.0"
event-listener = "5.4.0"
tower = { version = "0.5" }
ulid = { version = "1.2.1", features = ["serde"] }
serde_json = "1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
apalis = { version = "1.0.0-rc.3", features = ["tracing", "limit"] }
apalis-workflow = { version = "0.1.0-rc.3" }
bincode = { version = "2.0.1", features = ["serde"] }
apalis-board = { version = "1.0.0-rc.3", features = ["axum"] }
axum = { version = "0.8", features = ["macros", "json"] }
tracing-subscriber = { version = "0.3.13", features = ["env-filter"] }
tracing = "0.1"
tower-http = { version = "0.6.6", features = ["fs", "normalize-path"] }

[features]
default = ["tokio-comp"]
tokio-comp = ["tokio", "tokio/net", "redis/tokio-comp"]
