[package]
name = "janus-exchanges"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Janus internal
janus-core = { path = "../../lib/janus-core" }
janus-cns = { path = "../cns", optional = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
async-trait.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Data types
rust_decimal = { workspace = true, features = ["serde-float"] }
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
url.workspace = true

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["all-exchanges"]
all-exchanges = ["binance", "bybit", "coinbase", "kraken", "okx", "kucoin"]
cns-metrics = ["janus-cns"]
binance = []
bybit = []
coinbase = []
kraken = []
okx = []
kucoin = []
