[package]
name = "janus-gap-detection"
version = "0.1.0"
edition = "2024"
authors = ["nuniesmith"]
license = "MIT"

[lib]
name = "janus_gap_detection"
path = "src/lib.rs"

[dependencies]
# Use workspace dependencies where available
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }

# Database
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }

# Utilities
async-trait = "0.1.89"
itertools = "0.14.0"
parking_lot = "0.12.5"

[dev-dependencies]
testcontainers = "0.26.3"
proptest = "1.9.0"
wiremock = "0.6.5"
criterion = { version = "0.8.1", features = ["async_tokio"] }

[features]
default = []
