[package]
name = "memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
qdrant-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.10.0"
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
