[package]
name = "janus-models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid = { version = "1.19.0", features = ["v4", "serde"] }
toml = "0.9.8"
config.workspace = true
statrs = "0.18.0"

[lib]
name = "janus_models"
path = "src/lib.rs"
