[package]
name = "vision"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Vision pipeline for JANUS - DiffGAF and time series imaging"

[dependencies]
# Internal crates
common = { path = "../common" }

# Burn framework
burn-core = { version = "0.19", default-features = false }
burn-ndarray = { version = "0.19", default-features = false }
burn-nn = { version = "0.19", default-features = false }
burn-autodiff = { version = "0.19", default-features = false }
# Full burn crate for Module derive macro and training
burn = { version = "0.19", default-features = false, features = ["ndarray", "train"] }
burn-train = { version = "0.19", default-features = false }

# Optional GPU support
burn-cuda = { version = "0.19", default-features = false, optional = true }
burn-wgpu = { version = "0.19", default-features = false, optional = true }

# Numerical computing
ndarray = "0.15"
num-traits = "0.2"
nalgebra = "0.33"

# Parallel processing
rayon = "1.11"

# Data loading
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# ML Framework (Candle from HuggingFace) - for DiffGaf and ViViT pipeline
candle-core = { workspace = true }
candle-nn = { workspace = true }

# Logging & tracing
tracing = "0.1"
log = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Metrics & monitoring
prometheus = "0.14"

# Visualization (optional)
plotters = { version = "0.3", optional = true }
image = { version = "0.25", optional = true }

# Testing utilities
approx = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.8"
rand = "0.10.0"

[features]
default = ["std"]
std = []
gpu = ["burn-cuda"]
wgpu = ["burn-wgpu"]
viz = ["plotters", "image"]
test-utils = ["approx"]

[[bench]]
name = "diffgaf_bench"
harness = false

[lib]
name = "vision"
path = "src/lib.rs"
