[package]
name = "janus-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util = { workspace = true }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
async-trait.workspace = true
toml.workspace = true
rand.workspace = true
redis = { workspace = true, optional = true }
chrono.workspace = true
uuid.workspace = true
prometheus.workspace = true
rust_decimal.workspace = true
futures-util = { workspace = true, optional = true }

[features]
default = ["redis"]
redis = ["dep:redis", "dep:futures-util"]
