[package]
name = "janus-backward"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "janus-backward"
path = "src/main.rs"

[dependencies]
# Unified JANUS core
janus-core = { workspace = true }

# Core crates
common = { path = "../../crates/common" }
memory = { path = "../../crates/memory" }
fks-proto = { workspace = true }
cns = { package = "janus-cns", path = "../../crates/cns" }
janus-models = { path = "../../crates/models" }
janus-health = { path = "../../crates/health" }
janus-ml = { path = "../../crates/ml" }

# Job Queue
apalis = { workspace = true }
apalis-redis = { workspace = true }
redis = { workspace = true }

# Runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"

# HTTP server for health/metrics
axum = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
arrow-ipc = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Vector DB
qdrant-client = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Database - PRIMARY for backward service
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }

# Metrics
prometheus = { workspace = true }

# Analytics
rayon = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = []
